# personal-api

./: Cargo.toml
src/: controllers.rs  main.rs
src/controllers/: audio.rs  books.rs  mod.rs
src/database/: books.rs  mod.rs  mongodb.rs
src/models/: book.rs
