[package]
name = "personal-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
env_logger = "0.11.1"
actix-cors = "0.7.0"
actix-rt = "2.8.0"
actix-web = "4.3.1"
json = "0.12.4"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.8.1"
futures = "0.3.30"
